force-app/main/default/objects/BankAccount__c/BankAccount__c.object-meta.xml
<CustomObject>
    <description>Object to store bank details</description>
    <label>Bank account</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Bank account name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>