force-app/main/default/objects/BankAccount__c/fields/AccountOwners__c.field-meta.xml
<CustomField>
    <fullName>AccountOwners__c</fullName>
    <description>The owner(s) of this bank account</description>
    <label>Account owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>