force-app/main/default/objects/BankAccount__c/fields/OwnerIds__c.field-meta.xml
<CustomField>
    <fullName>OwnerIds__c</fullName>
    <description>A list of the salesforce ids of the owners of this account</description>
    <label>OwnerIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>