force-app/main/default/objects/BankAccount__c/fields/PlatformCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedBy__c</fullName>
    <description>Used for auditing this object</description>
    <label>Platform created by</label>
    <length>18</length>
    <type>Text</type>
</CustomField>