force-app/main/default/objects/BankAccount__c/fields/PlatformCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedDateTime__c</fullName>
    <description>Used for auditing of this object</description>
    <label>Platform created date time</label>
    <type>DateTime</type>
</CustomField>