force-app/main/default/objects/BankAccount__c/fields/PlatformId__c.field-meta.xml
<CustomField>
    <fullName>PlatformId__c</fullName>
    <description>Used to sync up with Comet</description>
    <externalId>true</externalId>
    <label>Platform ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>