force-app/main/default/objects/BankAccount__c/fields/PlatformLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedBy__c</fullName>
    <description>Used for auditing of this object</description>
    <label>Platform Last Modified By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>