force-app/main/default/objects/BankAccount__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>Used for auditing of this object</description>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>