force-app/main/default/objects/BankAccount__c/fields/PlatformStatus__c.field-meta.xml
<CustomField>
    <fullName>PlatformStatus__c</fullName>
    <description>Indicates whether the bank details and preferences are aligned with Hubwise</description>
    <label>Hubwise status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updates required</fullName>
            </value>
            <value>
                <fullName>In place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>