force-app/main/default/objects/BankAccount__c/fields/SortCode__c.field-meta.xml
<CustomField>
    <fullName>SortCode__c</fullName>
    <description>The sort code for this bank account</description>
    <label>Sort code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>