force-app/main/default/objects/BankAccount__c/fields/VerificationDocumentation__c.field-meta.xml
<CustomField>
    <fullName>VerificationDocumentation__c</fullName>
    <description>Field to record link to google drive folder where bank account verification is stored</description>
    <label>Verification documentation</label>
    <type>Url</type>
</CustomField>