force-app/main/default/objects/BankAccount__c/validationRules/AccountNumberFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNumberFormat</fullName>
    <active>true</active>
    <description>Ensures account numbers are numbers only</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; NOT(REGEX(AccountNumber__c, &quot;[0-9]{8}&quot;))</errorConditionFormula>
    <errorDisplayField>AccountNumber__c</errorDisplayField>
    <errorMessage>Account numbers can only contain numbers</errorMessage>
</ValidationRule>