force-app/main/default/objects/BankAccount__c/validationRules/FormatValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FormatValidation</fullName>
    <active>true</active>
    <description>Ensures sort codes have the correct format</description>
    <errorConditionFormula>NOT(REGEX(SortCode__c, &quot;[0-9]{2}\\-[0-9]{2}\\-[0-9]{2}&quot;))</errorConditionFormula>
    <errorDisplayField>SortCode__c</errorDisplayField>
    <errorMessage>Sort codes must have the format XX-XX-XX</errorMessage>
</ValidationRule>