force-app/main/default/objects/BankAccount__c/validationRules/SortCodeFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>SortCodeFormat</fullName>
    <active>true</active>
    <description>Ensures sort codes have the correct format</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; NOT(REGEX(SortCode__c, &quot;[0-9]{2}\\-[0-9]{2}\\-[0-9]{2}&quot;))</errorConditionFormula>
    <errorDisplayField>SortCode__c</errorDisplayField>
    <errorMessage>Sort codes must have the format XX-XX-XX</errorMessage>
</ValidationRule>