force-app/main/default/objects/BankAccount__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>AccountOwners__c</columns>
    <columns>Employment__c</columns>
    <columns>PlatformStatus__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>